# alias-wallet-archive

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  COPYING  Dockerfile  INSTALL  Info.plist  Jenkinsfile  Jenkinsfile_Android  Jenkinsfile_Mac  Jenkinsfile_Windows  Jenkinsfile_disabled  Makefile  Makefile.am  README.md  ReleaseNotes.md  ReleaseNotes_Android.md  ReleaseNotes_Pre3.0.md  ReleaseNotes_Pre4.0.md  Spectre.pro  autogen.sh  configure  configure.ac  db-atomic.patch  db4.8.pri  index.html  install_boost_1_67  install_boost_1_67.sh  install_docker_debian.sh  leveldb-arm64.patch  leveldb-harden.patch  leveldb-memenv.patch  leveldb-win32.patch  leveldb.patch  leveldb.pri  macdeployqt.sh  (+7 more)
src/: CMakeLists.txt  Info.plist.in  Makefile.am  addrman.cpp  addrman.h  alert.cpp  alert.h  allocators.h  anonymize.cpp  anonymize.h  base58.h  bignum.h  bloom.cpp  bloom.h  build.h.in  chainparams.cpp  chainparams.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  clientversion.h  clientversion.h.in  clientversion.h.obsolete  coincontrol.h  compat.h  core.cpp  core.h  crypter.cpp  crypter.h  crypto-ops.c  crypto.cpp  crypto.h  currency.h  db.cpp  db.h  eckey.cpp  eckey.h  extkey.cpp  extkey.h  hash.cpp  (+96 more)
src/android/: AndroidManifest.in.xml  AndroidManifest.xml  build.gradle  gradle.properties
src/android/java/org/alias/wallet/: AliasActivity.java  AliasService.java  BiometricActivity.java  BootstrapService.java
src/android/java/org/spectrecoin/wallet/: BootstrapService.java  SpectrecoinActivity.java  SpectrecoinService.java
src/android/res/drawable/: ic_alias_app.xml  ic_alias_app_white.xml  ic_battery_off.xml  ic_battery_on.xml  ic_staking.xml  ic_tx_inout.xml  ic_tx_input.xml  ic_tx_output.xml  ic_tx_staked.xml
src/android/res/values/: libs.xml  styles.xml
src/json/: CMakeLists.txt  json_spirit.h  json_spirit_error_position.h  json_spirit_reader.cpp  json_spirit_reader.h  json_spirit_reader_template.h  json_spirit_stream_reader.h  json_spirit_utils.h  json_spirit_value.cpp  json_spirit_value.h  json_spirit_writer.cpp  json_spirit_writer.h  json_spirit_writer_template.h
src/lz4/: CMakeLists.txt
src/osx/: Info.plist  MacOSXBundleInfo.plist.in  torrc-defaults  torrc-defaults_obfs4
src/qt/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  addresstablemodel.cpp  addresstablemodel.h  alias_locale.qrc  aliasbridgestrings.h  aliascorestrings.h  applicationmodel.cpp  applicationmodel.h  applicationmodelconstants.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bitcoinaddressvalidator.cpp  bitcoinaddressvalidator.h  bitcoinamountfield.cpp  bitcoinamountfield.h  bitcoinstrings.cpp  bitcoinunits.cpp  bitcoinunits.h  bootstrapwizard.cpp  bootstrapwizard.h  bridgetranslations.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  macnotificationhandler.mm  (+47 more)
src/qt/forms/: aboutdialog.ui  askpassphrasedialog.ui  coincontroldialog.ui  restartdialog.ui  rpcconsole.ui
src/qt/locale/: alias_af_ZA.ts  alias_ar.ts  alias_be.ts  alias_bg.ts  alias_bs.ts  alias_ca.ts  alias_ca@valencia.ts  alias_ca_ES.ts  alias_cs.ts  alias_cy.ts  alias_da.ts  alias_de.ts  alias_el.ts  alias_el_GR.ts  alias_en.ts  alias_eo.ts  alias_es.ts  alias_es_MX.ts  alias_et.ts  alias_eu_ES.ts  alias_fa.ts  alias_fa_IR.ts  alias_fi.ts  alias_fr.ts  alias_fr_CA.ts  alias_gl.ts  alias_he.ts  alias_hi_IN.ts  alias_hr.ts  alias_hu.ts  alias_id_ID.ts  alias_it.ts  alias_ja.ts  alias_ka.ts  alias_kk.ts  alias_ko_KR.ts  alias_ky.ts  alias_la.ts  alias_lt.ts  alias_lv_LV.ts  (+160 more)
src/qt/rep/: addressmodelremote.rep  applicationmodelremote.rep  clientmodel.rep  clientmodelremote.rep  modelremote.rep  optionsmodelremote.rep  walletmodelremote.rep
src/qt/res/: Alias-Icon-Orange.icns  README.md  alias-qt.rc  bitcoin-qt.rc  index.html  main.qml
src/qt/res/assets/css/: contextMenu.css  font-awesome.min.css  font-montserrat.css  footable.core.css  footable.metro.css  framework-icons.css  framework-icons.min.css  framework.min.css  main.css  spectre.min.css
src/qt/res/assets/icons/: spectre.icns
src/qt/res/assets/js/: navigation.min.js  qrcode.min.js  spectre.min.js  tooltip.min.js
src/qt/res/assets/js/pages/: send.min.js
src/qt/res/assets/plugins/contextMenu/: contextMenu.css
src/qt/res/assets/plugins/emojione/: emojione.js
src/qt/res/assets/plugins/footable/: footable.paginate.js
src/qt/res/assets/plugins/framework/: framework.min.js
src/qt/res/assets/plugins/iscroll/: iscroll.js
src/qt/res/assets/plugins/qrcode/: qrcode.min.js
src/qt/res/css/: footable.core.css  footable.metro.css  main.css
src/qt/res/icons/: alias-app.icns
src/qt/test/: CMakeLists.txt  test_main.cpp  uritests.cpp  uritests.h
src/test/: CMakeLists.txt  Checkpoints_tests.cpp  README  accounting_tests.cpp  allocator_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  basic_tests.cpp  bignum_tests.cpp  bip32_tests.cpp  extkey_tests.cpp  getarg_tests.cpp  hash_tests.cpp  hmac_tests.cpp  key_tests.cpp  mnemonic_tests.cpp  mruset_tests.cpp  multisig_tests.cpp  netbase_tests.cpp  ringsig_tests.cpp  rpc_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  sigopcount_tests.cpp  smsg_tests.cpp  stealth_tests.cpp  test_alias.cpp  test_shadow.cpp  uint160_tests.cpp  uint256_tests.cpp  util_tests.cpp  wallet_tests.cpp
src/test/data/: bip39_vectors.json
src/test/other/: DoS_tests.cpp  miner_tests.cpp  transaction_tests.cpp
src/tor/: config.c  log.c  orconfig.h  orconfig_linux.h  orconfig_linux32.h  orconfig_linux64.h  orconfig_win32.h  rendservice.c
src/win/: CMakeLists.txt  README.txt  torrc-defaults  torrc-defaults_obfs4  unistd.h
src/wordlists/: CMakeLists.txt  chinese_simplified.h  chinese_traditional.h  english.h  french.h  japanese.h  spanish.h
src/xxhash/: CMakeLists.txt  LICENSE.txt  xxhash.c  xxhash.h
(+148 files in other folders)
